<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/s01e01"
        android:textColor="#081F32"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_name_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_episode"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pilot"
        android:textColor="@color/color_text_grey"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/december_2_2013"
        android:textColor="@color/color_text_grey"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/iv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_next"
        android:layout_marginTop="32dp"
        android:layout_marginStart="274dp"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>