<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="#081F32">

    <ImageView
        android:id="@+id/iv_logo_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/pixelwolf"/>

    <ImageView
        android:id="@+id/iv_logo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo2"
        android:layout_marginTop="22dp"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="33dp"/>

    <TextView
        android:id="@+id/tv_introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/introduce"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="5dp"
        tools:ignore="RtlCompat"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_introduce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/get_the_instructions"
        android:background="@drawable/custom_button_instruction"
        android:textColor="#34C759"
        android:textSize="14sp"
        android:paddingStart="67dp"
        android:paddingEnd="67dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="181dp"/>

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/start_prototype"
        android:textSize="14sp"
        android:textColor="#081F32"
        android:background="@drawable/custom_button_start"
        android:paddingStart="89dp"
        android:paddingEnd="89dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
